# GeneralsAP

./: .gitignore  .gitmodules  ARCHIPELAGO_CONTEXT_INDEX.md  CMakePresets.json  Run-GeneralsAP-Debug.cmd  Run-GeneralsAP-Demo.cmd  Run-GeneralsAP-Playtest.cmd  Run-GeneralsAP-Reference.cmd  TESTING.md
.github/workflows/: ci.yml  sync-archipelago-vendor.yml  sync-superhackers-upstream.yml  validate-archipelago-data.yml
Core/GameEngine/Include/Common/: OptionPreferences.h
Data/Archipelago/: README.md  Slot-Data-Format.md  Spawned-Unit-AI-Notes.md  Unit-Matchup-Sources.md  always_unlocked.json  challenge_unit_protection.json  cluster_config.json  display_names.json  enemy_general_profiles.json  family_overrides.json  generated_challenge_unit_protection_report.txt  generated_unit_matchup_graph.csv  generated_unit_matchup_graph.json  generated_unit_matchup_graph_readable.txt  groups.json  ingame_names.json  mission_check_rewards.json  name_overrides.json  non_spawnable_templates.json  options_schema.yaml  presets.json  release_manifest_schema.json  template_ingame_names.json  unit_matchup_archetype_weights.csv  unit_matchup_archetypes.json  unit_matchup_overrides.csv  wnd_working_set.json
Data/Archipelago/UI/: ap_shell_fixture.json  ap_shell_required_controls.json  ap_shell_strings.json  main_menu_patch_recipe.json
Data/Archipelago/UI/Wnd/: APCheckTracker.wnd  APConnect.wnd  APMissionIntel.wnd  ArchipelagoHub.wnd
Data/Archipelago/bridge_fixtures/: almost_exhausted_pool.json  minimal_progression.json  mixed_progression.json  post_exhaustion_pool.json
Data/Archipelago/cluster_definitions/: export_test.json  sample_coords.txt
Data/Archipelago/location_families/: README.md  authoring_schema.json  capacity_targets.json  catalog.json  enable_criteria.json  runtime_persistence_contract.json
Data/Archipelago/location_families/fixtures/: example_candidates.json
Data/Archipelago/reference/: ArchipelagoBIGArchiveLabels.txt  ArchipelagoThingFactoryTemplates_filtered.txt  archipelago_template_display_names.json  unresolved_template_name_notes.json
Data/Archipelago/runtime_profiles/: profiles.json
Data/Archipelago/runtime_profiles/archipelago-bisect/: batches.json
Data/English/: CommandMap.ini  readme.doc  readme.txt
Data/INI/: Archipelago.ini  ArchipelagoChallengeUnitProtection.ini  CommandMap.ini  CommandMapDebug.ini  GameData.ini  UnlockableChecksDemo.ini  WindowTransitions.ini
Data/INI/MappedImages/HandCreated/: zz_ArchipelagoLock.ini
Data/INI/MappedImages/TextureSize_512/: HandCreatedMappedImages.INI  SAControlBar512.INI  SAUserInterface512.INI  SCGameUserInterface512.INI  SCLogosUserInterface512.INI  SCPatchUserInterface512.INI  SCShellUserInterface512.INI  SCSmShellUserInterface512.INI  SNControlBar512.INI  SNUserInterface512.INI  SSUserInterface512.INI  SUControlBar512.INI  SUUserInterface512.INI
Docs/Archipelago/: Manual-Review-And-Debug-Guide.md  Spawned-Unit-AI.md  Unlock-Group-Logic.md  archipelago-ai-context.md  demo-video-captions.srt  demo-video-context.md  demo-video-script.md
Docs/Archipelago/Legacy/: Legacy-Project-Todo.md
Docs/Archipelago/Operations/: Archipelago-State-Sync-Architecture.md  Archipelago-Vendor-Sync.md  Player-Release-Architecture.md  SuperHackers-Upstream-Sync.md  WND-UI-Workbench.md
Docs/Archipelago/Planning/: AP-World-Skeleton-Notes.md  Archipelago-Code-Review.md  Archipelago-Implementation-Todo.md  Archipelago-Logic-Implementation-Guide.md  Archipelago-Logic-Mapping-Draft.md  Item-Location-Framework-Branch-Readiness.md  Item-Location-Framework.md
Docs/Archipelago/Research/: Grouping-Changes.md  Spawnability-Audit.md
Docs/Archipelago/UnlockableChecks/: Unlockable-Checks-Deep-Dive.md  Unlockable-Checks-Demo-Test-Procedure.md  Unlockable-Checks-Design.md  Unlockable-Checks-Implementation-Verification.md
Generals/Code/GameEngine/Include/GameLogic/: Locomotor.h  Object.h
Generals/Code/GameEngine/Source/Common/: version.cpp
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: GlobalData.h  MessageStream.h
GeneralsMD/Code/Main/: CMakeLists.txt  CopyIniToExeDir.cmake
Wiki/Asset/: _Sidebar.md
Wiki/Asset/GameDesign/ini/: Archipelago-Ini-Format.md  Archipelago-Template-Name-Pipeline.md
resources/gitinfo/: gitinfo.cpp.in
scripts/: archipelago_apply_mission_check_rewards.py  archipelago_audit_groups.py  archipelago_bridge_executable_smoke.py  archipelago_bridge_local.py  archipelago_bridge_network_smoke.py  archipelago_bridge_real_ap_server_smoke.py  archipelago_build_display_name_map.py  archipelago_build_localized_name_map.py  archipelago_build_template_name_map.py  archipelago_cluster_editor.py  archipelago_cluster_selection.py  archipelago_data_helpers.py  archipelago_expand_group_templates.py  archipelago_extract_ini_config.py  archipelago_extract_template_display_names.py  archipelago_generate_challenge_unit_protection.py  archipelago_generate_ini.py  archipelago_generate_matchup_graph.py  archipelago_item_location_capacity_report.py  archipelago_location_catalog_validate.py  archipelago_logic_prerequisites.py  archipelago_run_checks.py  archipelago_run_real_ap_smoke.py  archipelago_runtime_fallback_contract_check.py  archipelago_seeded_bridge_loop_smoke.py  archipelago_validate_allowlist.txt  archipelago_validate_ini.py  archipelago_vendor_capture.py  archipelago_vendor_helpers.py  archipelago_vendor_materialize.py  archipelago_vendor_sync.ps1  archipelago_vendor_sync.py  archipelago_vendor_sync.sh  build_generalsap_bridge.ps1  build_generalsap_bridge_stub.ps1  extract_map_preview.py  package_generalsap_alpha.ps1  repo_configure_remotes.ps1  repo_configure_remotes.sh  requirements-archipelago-smoke.txt  (+15 more)
scripts/cluster_editor/: editor.js  index.html  renderer3d.js  style.css
scripts/cluster_editor/maps/: registry.json
scripts/tests/: test_archipelago_data_pipeline.py  test_archipelago_generation_smoke_optional.py  test_archipelago_world_contract.py  test_wnd_workbench.py
tools/bridge/GeneralsAPBridge/: ApNetworkBridge.cs  GeneralsAPBridge.csproj  Program.cs
(+77 files in other folders)
